# Project_Soul_Anchor

./: .gitignore  EMBEDDING_PLAN.md  MIGRATION.md  MemoryManager.py  Project_Soul_Anchor_Research.md  README.md  pyproject.toml  record_genesis.py  record_trace_driven.py  test_memory_manager.py
scripts/: backfill_embeddings_once.py
src/soul_anchor/: manager.py
src/soul_anchor/agentic/: __init__.py  audit.py  audit_writer.py  candidates.py  conflicts.py  decision_engine.py  gating.py  tools.py  versioning.py
src/soul_anchor/db/: __init__.py  schema.py  variant.py
src/soul_anchor/embedding/: __init__.py  dummy.py  similarity.py
src/soul_anchor/retrieval/: __init__.py  context_builder.py  fts.py  ranking.py
tests/: test_agentic_audit.py  test_agentic_decision_engine.py  test_agentic_gating.py  test_agentic_phase32_candidates.py  test_agentic_phase32_conflict_resolution.py  test_agentic_phase33_versioning.py  test_agentic_tools.py  test_fts.py  test_imports.py  test_manager_phase1.py  test_manager_phase2.py  test_schema.py
